--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.1",
+    "sass": "^1.49.8",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -40,6 +41,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
+    "prop-types": "^15.8.1",
     "tailwindcss": "^3.0.11"
   }
 }
